[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Mark Oborne <markoborne1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_simd = { git = "https://github.com/rust-lang/portable-simd" }
image = "0.24.5"
